[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = ""
name = "mars-tile-server"
version = "0.1.0"

[tool.poetry.dependencies]
birdbrain = ""
cogeo-mosaic = "^3.0.2"
ipython = "^7.28.0"
python = "^3.8"
rich = "^10.12.0"
rio-rgbify = "^0.3.2"
rio-tiler = "^2.1.3"
"sparrow.birdbrain" = ""
"sparrow.dinosaur" = ""
"sparrow.utils" = ""
titiler = "^0.3.11"
typer = "^0.4.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.5.1"
"sparrow.birdbrain" = {path = "../../python-tools/birdbrain", develop = true}
"sparrow.dinosaur" = {path = "../../python-tools/dinosaur", develop = true}
"sparrow.utils" = {path = "../../python-tools/utils", develop = true}

[tool.poetry.scripts]
tile-server = "mars_tile_server:cli"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
