[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = ""
name = "mars-tiler"
version = "0.2.0"

[tool.poetry.dependencies]
Shapely = "^1.8.0"
asyncpg = "^0.24.0"
databases = {extras = ["postgresql"], version = "^0.5.3"}
gunicorn = "^20.1.0"
ipython = "^7.28.0"
psycopg = "^3.0.8"
psycopg-pool = "^3.0.3"
pyproj = "^3.2.1"
pytest = "^6.2.5"
python = "^3.8"
rich = "^10.12.0"
rio-rgbify = "^0.3.2"
rio-tiler = "^3.0.2"
"sparrow.birdbrain" = ""
"sparrow.dinosaur" = ""
"sparrow.utils" = ""
"titiler.core" = "^0.4.0"
"titiler.mosaic" = "^0.4.0"
typer = "^0.4.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
anyio = "^3.3.4"
black = {version = "^21.12b0", allow-prereleases = true}
debugpy = "^1.5.1"
pytest-dependency = "^0.5.1"
python-dotenv = "^0.19.2"
"sparrow.birdbrain" = {path = "./deps/python-tools/birdbrain", develop = true}
"sparrow.dinosaur" = {path = "./deps/python-tools/dinosaur", develop = true}
"sparrow.utils" = {path = "./deps/python-tools/utils", develop = true}
trio = "^0.19.0"
requests = "^2.27.1"

[tool.poetry.scripts]
tile-server = "mars_tiler:cli"

[tool.pytest.ini_options]
testpaths = [
  "mars_tiler",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
